<?xml version="1.0"?>
<package format="2">
  <name>ekf_tests</name>
  <version>0.0.1</version>
  <description>Statistical tests for the EKF</description>

  <maintainer email="laughlinbarker@gmail.com">Laughlin Barker</maintainer>

  <!--  Make it easy -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
